Bug 381392 - When changing outgoing identity on replying, signature is not updated
Summary: When changing outgoing identity on replying, signature is not updated
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-19 08:50 UTC by Vojtěch Zeisek
Modified: 2018-05-08 18:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vojtěch Zeisek 2017-06-19 08:50:16 UTC
I use KMail 5.5.2 on openSUSE Tumbleweed (KF 5.34.0, Qt 5.7.1). When answering an e-mail, if I change identity, the signature in footer is not changed. The signature was set in the signature tab of the identity editor. If I compose new e-mail (i.e. not replying), this works. It happens only when replying to e-mail (typically needed if I answer conference e-mail).
Comment 1 Jacopo De Simoi 2018-02-14 16:12:44 UTC
I confirm this behavior.
Comment 2 Vojtěch Zeisek 2018-02-14 16:24:40 UTC
Still present in KMail 5.7.1 (KF 5.42.0), Qt 5.10.0.
Comment 3 Laurent Montel 2018-02-15 07:07:36 UTC
I confirm it.
I don't undertand yet why it doesn't updated.
I am investigating it.
Comment 4 Laurent Montel 2018-02-15 13:00:22 UTC
Git commit 4fef1b01a4b0c482067d1b8a071384800d46011c by Laurent Montel.
Committed on 15/02/2018 at 13:00.
Pushed by mlaurent into branch 'master'.

Fix Bug 381392 - When changing outgoing identity on replying, signature is not updated

FIXED-IN: 5.8.0

M  +2    -3    src/editor/kmcomposerwin.cpp

https://commits.kde.org/kmail/4fef1b01a4b0c482067d1b8a071384800d46011c
Comment 5 Jacopo De Simoi 2018-05-08 18:27:01 UTC
A weird bug was introduced by this commit.  I have not yet found a proper way to reproduce, but flipping through my identities (which may or may not have signatures) now occasionally removes *all* whitespace from the body of the email. 

Does this sound familiar? Otherwise I'll try to figure out a way to reproduce
Comment 6 Vojtěch Zeisek 2018-05-08 18:36:07 UTC
I still sometimes see it as it is described in #1. It almost every time happens with some conferences. E.g. my opensuse.org e-mail is just forwarding the mail to another account. Then, when I reply to the conference, KMail pick-up default identity for that account. When I change the identity in KMail to that opensuse.org, footer signature is not updated accordingly...