Fix Bug 381392 - When changing outgoing identity on replying, signature is not updated

FIXED-IN: 5.8.0
BUG: 381392